Revision history for Perl extension SVG.

    - POD formatting

2.60 2015.03.03
	- Convert source files to utf8
	- Add more tests
	- css styles are now sorted to make it easeier to test
	- Run Perltidy on the code

2.59 2013.03.31
	- Experiment to show images on MetaCPAN

2.56 2013.03.30
	- Move all the content of SVG::Manual to SVG

2.55 2013.03.30
	- Add an image to the pod generated by and example.
	- Rename SVG::Manual from .pm to .pod.
	- Stop violating the Subroutines::ProhibitExplicitReturnUndef policy,
	  eliminate 'return undef' and return wantarray?():undef; from the code.

2.54 2013.02.16
	- Update the dates in the Changes file.
	- Remove the function prototypes that don't work on methods anyway.
	  Stop violating the Subroutines::ProhibitSubroutinePrototypes policy.

2.53 2012.08.09
	- missing test file removed from MANIFEST (RT #78856)

2.52 2012.05.29
	- move POD testing to xt/
	- Some example cleanup - Shlomi Fish
	- removing prototype - Shlomi Fish
	- POD fixes - David Paleino

2.51 2012.03.30
	- Maintenance by Gabor Szabo
	- Some documentation fixes.
	- Modernizing test suite.
	- Link to new public repository.

2.50 2010.04.05
	-Fixed inline SVG generation method (bug # 43814 and 50075)
	-Fixed XML-escaped characters (bug # 53918 and 44454)
	-Fixed undef bug in findChildIndex (bug # 48932)
	-Fixed memory leaks with Scalar::Util::weaken() (bug # 54458)
	-Fixed cloning method (bug # 36194)
	-DOM::insertAtIndex() and removeAtIndex() now update the ID and element list

2.49 2009.01.23
	-Fixed bugtracker URL in YAML

2.48 2009.01.08
	-Improved YAML and MANIFEST for cpan testers game

2.47 2008.12.15
	-Fixed MANIFEST - replaced Changes entry

2.46 2008.12.15
	-Improved META.yml
	-Fixed MANIFEST
	-Removed all pointless files

2.45 2008.12.15
	-Improved META.yml

2.44 2008.04.21
	-Improved META.yml

2.43 2008.04.21
	-Improved META.yml

2.42 2008.04.16
	-Removed Makefile from MANIFEST

2.41 2008.04.16