@@ -1,5 +1,6 @@
 Revision history for Perl extension SVG.
 
+    - Skip tidy testing if module is not available (RT #102484)
     - POD formatting
 
 2.60 2015.03.03
